--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -164,7 +164,6 @@
 .nova-cta {
     position: relative;
     overflow: hidden;
-    margin: 0;
 }
 
 .nova-cta-container {
@@ -173,8 +172,9 @@
     gap: 2rem;
     align-items: center;
     background: transparent !important;
-    margin: 0;
-    padding: 0;
+    margin: 2em 0;
+    padding: 2em;
+    border-radius: 4px;
 }
 
 /* Content Styles */
